CC: Java 25 style, Paper 1.8.8–26.x-safe hex, matcher fix (#6)
* refactor(CC): Java 25 idioms, hex without Bungee, fix matcher flow

- Replace Bungee ChatColor.of with legacy §x§r§r§g§g§b§b expansion using
  ChatColor.COLOR_CHAR so hex translation works on Paper back to 1.8.8.
- Fix translateHex to drive replacements from a single Matcher with
  appendReplacement/appendTail (previous loop used a stale matcher).
- Use Stream.toList(), private constructor, StringBuilder; precompile
  strip regexes; null-safe translate(List).
- Document hex behavior in javadoc.

Co-authored-by: Jejdhfhrjeks <wduwdheufhuedhu@users.noreply.github.com>

* chore(CC): remove unused variable in translateHex

Co-authored-by: Jejdhfhrjeks <wduwdheufhuedhu@users.noreply.github.com>

* docs(CC): cross-version javadoc; remove duplicate and gimmick constants

- Document 1.8.8–current Paper compatibility and hex client behavior.
- Drop BD_DARKAQUA (identical to BD_AQUA), OBFUSCATED (MAGIC), PINK
  (L_PURPLE), and VAPE/BLANK_LINE/BL (unused in tree; not core API).

Co-authored-by: Jejdhfhrjeks <wduwdheufhuedhu@users.noreply.github.com>

* chore(CC): remove javadoc comments

Co-authored-by: Jejdhfhrjeks <wduwdheufhuedhu@users.noreply.github.com>

---------

Co-authored-by: Cursor Agent <cursoragent@cursor.com>
Co-authored-by: Jejdhfhrjeks <wduwdheufhuedhu@users.noreply.github.com>